--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-catalog-link.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-catalog-link.html
@@ -7,7 +7,7 @@
         <div hidden$="[[!stamp.label]]">
             <alexandria-hyperlink name="[[stamp.name]]" label="[[stamp.label]]"
                                   on-item-tap="_navigateCatalog"
-                                  styles="[[_style]]"></alexandria-hyperlink>
+                                  style$="[[_style]]"></alexandria-hyperlink>
         </div>
     </template>
 
