--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-highlight.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-highlight.html
@@ -13,7 +13,7 @@
     </template>
 
     <style>
-        :host {
+        :host .highlight {
             color: white;
             margin: 4px 5px 2px 0;
             display: inline-block;
