--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-picture.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-picture.html
@@ -10,7 +10,7 @@
                 <img class$="single [[stamp.classes]] picture_img_[[stamp.name]]" src="[[stamp.value]]" class="icon" style$="[[_style]]" />
             </div>
             <div hidden$="[[stamp.singleValue]]">
-                <l2t-paper-slider id="paperSlider" class$="[[stamp.classes]]" total-slides$="[[stamp.countValues]]" tabIndex="-1" auto-progress slide-duration="4">
+                <l2t-paper-slider id="paperSlider" class$="[[stamp.classes]]" total-slides$="[[stamp.countValues]]" tabIndex="-1" slide-duration="4">
                     <template is="dom-repeat" items="[[stamp.values]]" as="picture">
                         <paper-slide><img src="[[picture]]"/></paper-slide>
                     </template>
@@ -78,11 +78,13 @@
             behaviors: [ AlexandriaBehaviors.StampBehavior ],
 
             _render : function() {
+                if (this.stamp.singleValue) return;
                 var slider = this.$.paperSlider;
                 var picture = $(slider).parents(".picture").get(0);
                 var height = $(picture).height();
                 var width = $(picture).width();
                 var style = "width:" + width + "px;height:" + height + "px !important;";
+                slider.autoProgress = true;
                 slider.querySelector("#container").setAttribute("style", style);
                 slider.querySelectorAll("paper-slide").forEach((slide) => {
                     slide.setAttribute("style", style);
