--- a/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-map-view.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-map-view.html
@@ -15,6 +15,7 @@
         <alexandria-catalog-map page-size="[[_pageSize]]"
                                 item-list="[[_itemList]]"
                                 count-item-list="[[_countItemList]]"
+                                mold="[[_view.mold]]"
                                 center="[[_view.center]]"
                                 zoom="[[_view.zoom]]"
                                 on-location-change="_loadLocation"
