--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-operation-trigger.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-operation-trigger.html
@@ -7,9 +7,9 @@
 
     <template>
         <div class$="mode [[mode]]">
-            <paper-icon-button class="option Icon" style$="[[styles]]" id="iconOperation" icon="[[icon]]" title="[[_title]]" on-tap="_execute"></paper-icon-button>
-            <paper-button class="option Button" style$="[[styles]]" on-tap="_execute">[[_title]]</paper-button>
-            <a class="option Link" style$="[[styles]]" title="[[_title]]" on-tap="_execute">[[_title]]</a>
+            <paper-icon-button class="option Icon" id="iconOperation" icon="[[icon]]" title="[[_title]]" on-tap="_execute"></paper-icon-button>
+            <paper-button class="option Button" on-tap="_execute">[[_title]]</paper-button>
+            <a class="option Link" title="[[_title]]" on-tap="_execute">[[_title]]</a>
         </div>
     </template>
 
