--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-task-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-task-operation.html
@@ -90,6 +90,7 @@
             _render : function() {
                 var title = this.stamp.label;
                 this._title = title != null && title != "" ? title : this.Execute;
+                $(this).attr("style", $(this).attr("style") + ";" + this._style);
             },
 
             _confirmTask : function(e) {
