--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-behavior.html
@@ -19,6 +19,8 @@
         _render : function() { }, // implemented by stamps
 
         _updateStyle : function () {
+            var properties = this.stamp.properties;
+            if (properties == null) return;
             var style = this.stamp.properties.defaultStyle != null ? this.stamp.properties.defaultStyle : "";
             style += style !== "" ? ";" : "";
             style += this.stamp.properties.style != null ? this.stamp.properties.style : "";
@@ -32,6 +34,7 @@
             zombie.setAttribute("widget", widget);
             if (object != null) zombie.setAttribute("object", object);
             layer.appendChild(zombie);
+            this.fire("stamp-ready");
             return zombie;
         }
 
