Fix toolbar style height

--- a/alexandria/activity-elements-activity/src/widgets/dialogs/alpaca.html
+++ b/alexandria/activity-elements-activity/src/widgets/dialogs/alpaca.html
@@ -75,15 +75,15 @@
     }
     .toolbar {
         border-top: 1px solid #ddd;
-        margin: 15px 0;
         padding-top: 10px;
+        height: 50px;
     }
     .toolbar > div {
         float: right;
         margin-left: 10px;
     }
     .tabs {
-        height: calc(100% - 100px);
+        height: calc(100% - 105px);
     }
     .tabs .inputs {
         margin: 10px;
