--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-container.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-container.html
@@ -10,6 +10,12 @@
         <div id="container"></div>
     </template>
 
+    <style>
+        :host #container {
+            height: 100%;
+        }
+    </style>
+
     <script>
         Polymer({
             is: 'alexandria-mold-container',
