Fix bug rendering tabs

--- a/alexandria/activity-elements-activity/src/widgets/dialogs/alpaca.html
+++ b/alexandria/activity-elements-activity/src/widgets/dialogs/alpaca.html
@@ -83,6 +83,7 @@
         margin-left: 10px;
     }
     .tabs {
+        overflow: auto;
         height: calc(100% - 105px);
     }
     .tabs .inputs {
