Added stamp catalog link style

--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-catalog-link.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-catalog-link.html
@@ -22,6 +22,7 @@
 
             _navigateCatalog : function(e) {
                 this.fire("navigate-catalog", { item: this.stamp.item, stamp: e.detail.item });
+                $(this).attr("style", $(this).attr("style") + ";" + this._style);
             }
         });
     </script>
