alexandria-activity: open element recursively, added cookies for alexandria layouts, added session auth service, fix bug loading widget templates

--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-layout-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-layout-behavior.html
@@ -138,6 +138,7 @@
                 stamp.value = "";
             }
             stamp.properties.icon = iconType === "alexandria" ? icon : "";
+            stamp.properties.title = this._parseFunctions(this._propertyValueOf(stamp, "title"));
         },
 
         _initBreadcrumbsProperties : function(stamp) {
