--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-icon.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-icon.html
@@ -19,7 +19,7 @@
     <template>
         <iron-icon class$="[[stamp.classes]]" icon$="[[stamp.properties.icon]]"
                    src$="[[stamp.value]]" style$="[[_style]]"
-                   title="[[stamp.label]]" hidden$="[[!stamp.value.length]]"></iron-icon>
+                   title="[[stamp.properties.title]]" hidden$="[[!stamp.value.length]]"></iron-icon>
     </template>
 
     <style>
