--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-editor.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-editor.html
@@ -14,6 +14,7 @@
         :host paper-input {
             --paper-input-container : {
                 padding: 0;
+                height: 18px;
             };
             --paper-input-container-input : {
                 border: 1px solid #ddd;
