--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-title.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-title.html
@@ -6,7 +6,7 @@
 
     <template>
         <div id="layer" on-tap="_edit" class$="title [[stamp.classes]] editable_[[stamp.editable]]" title$="[[stamp.value]]" style$="[[_style]]">[[stamp.value]]</div>
-        <alexandria-mold-editor id="editor" class$="title [[stamp.classes]]" label$="[[stamp.label]]" value$="{{stamp.value}}" hidden$="[[!stamp.editable]]" style="display:none;" on-save="_save" on-close="_close"></alexandria-mold-editor>
+        <alexandria-stamp-editor id="editor" class$="title [[stamp.classes]]" label$="[[stamp.label]]" value$="{{stamp.value}}" hidden$="[[!stamp.editable]]" style="display:none;" on-save="_save" on-close="_close"></alexandria-stamp-editor>
     </template>
 
     <style>
