--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-task-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-task-operation.html
@@ -40,8 +40,11 @@
             border-radius: 10px;
         }
         :host paper-dialog h2 {
-            margin-top: 10px;
-            font-size: 14pt;
+            background: #efefef;
+            margin-top: 0;
+            margin-bottom: 10px;
+            font-size: 11pt;
+            padding: 4px 10px;
         }
         :host paper-dialog .message {
             margin-top: 0;
@@ -62,13 +65,13 @@
         const AlexandriaStampTaskOperationDictionary = {
             es: {
                 Execute : "ejecutar",
-                Title : "confirmar operación",
+                Title : "confirmar",
                 Accept : "aceptar",
                 Cancel : "cancelar"
             },
             en: {
                 Execute : "execute",
-                Title : "confirm operation",
+                Title : "confirm",
                 Accept : "accept",
                 Cancel : "cancel"
             }
